Processing Related Work V1

--- a/report.bib
+++ b/report.bib
@@ -33,3 +33,27 @@ title = {{Learnable Programming}},
 url = {http://worrydream.com/LearnableProgramming/},
 year = {2012}
 }
+@inproceedings{sorensen2005impromptu,
+author = {Sorensen, Andrew},
+booktitle = {Proceedings of the Australasian Computer Music Conference},
+number = {July},
+pages = {2--4},
+title = {{Impromptu: An interactive programming environment for composition and performance}},
+year = {2009}
+}
+@book{reas2007processing,
+abstract = {It has been more than twenty years since desktop publishing reinvented design, and it's clear that there is a growing need for designers and artists to learn programming skills to fill the widening gap between their ideas and the capability of their purchased software. This book is an introduction to the concepts of computer programming within the context of the visual arts. It offers a comprehensive reference and text for Processing (www.processing.org), an open-source programming language that can be used by students, artists, designers, architects, researchers, and anyone who wants to program images, animation, and interactivity.Processing have been tested in classrooms, workshops, and arts institutions, including UCLA, Carnegie Mellon, New York University, and Harvard University. Tutorial units make up the bulk of the book and introduce the syntax and concepts of software (including variables, functions, and object-oriented programming), cover such topics as photography and drawing in relation to software, and feature many short, prototypical example programs with related images and explanations. More advanced professional projects from such domains as animation, performance, and typography are discussed in interviews with their creators. "Extensions" present concise introductions to further areas of investigation, including computer vision, sound, and electronics. Appendixes, references to other material, and a glossary contain additional technical details. Processing can be used by reading each unit in order, or by following each category from the beginning of the book to the end. The Processing software and all of the code presented can be downloaded and run for future exploration.With essays by:<br Alexander R. Galloway, Golan Levin, R. Luke DuBois, Simon Greenwold, Francis Li, and Hernando Barrag\'{a}n and interviews with Jared Tarbell, Martin Wattenberg, James Paterson, Erik van Blockland, Ed Burton, Josh On, J\"{u}rg Lehni, Auriea Harvey and Micha\"{e}l Samyn, Mathew Cullen and Grady Hall, Bob Sabiston, Jennifer Steinkamp, Ruth Jarman and Joseph Gerhardt, Sue Costabile, Chris Csikszentmih\'{a}lyi, Golan Levin and Zachary Lieberman, and Mark Hansen.},
+author = {Reas, Casey and Fry, Ben},
+booktitle = {Processing},
+doi = {10.1523/JNEUROSCI.2525-09.2009},
+isbn = {9780262182621},
+issn = {15292401},
+number = {2},
+pages = {736},
+pmid = {20016109},
+publisher = {Mit Press},
+title = {{Processing: A Programming Handbook for Visual Designers and Artists}},
+url = {http://www.amazon.com/dp/0262182629},
+volume = {54},
+year = {2007}
+}
