--- a/report.bib
+++ b/report.bib
@@ -10,6 +10,20 @@
   year={1983},
   publisher={Addison-Wesley Longman Publishing Co., Inc.}
 }
+@article{Resnick:2009:SP:1592761.1592779,
+address = {New York, NY, USA},
+author = {Resnick, Mitchel and Maloney, John and Monroy-Hern\'{a}ndez, Andr\'{e}s and Rusk, Natalie and Eastmond, Evelyn and Brennan, Karen and Millner, Amon and Rosenbaum, Eric and Silver, Jay and Silverman, Brian and Kafai, Yasmin},
+doi = {10.1145/1592761.1592779},
+issn = {0001-0782},
+journal = {Commun. ACM},
+number = {11},
+pages = {60--67},
+publisher = {ACM},
+title = {{Scratch: Programming for All}},
+url = {http://doi.acm.org/10.1145/1592761.1592779},
+volume = {52},
+year = {2009}
+}
 @inproceedings{Kay:2011:PCC:800193.1971922,
 abstract = {This note speculates about the emergence of personal, portable information manipulators and their effects .when used by both children and adults. Although it should be read as science fiction, current trends in miniaturization and price reduction almost guarantee that many of the notions discussed will actually happen in the near future.},
 address = {New York, NY, USA},
@@ -66,4 +80,57 @@ title = {{Processing: A Programming Handbook for Visual Designers and Artists}},
 url = {http://www.amazon.com/dp/0262182629},
 volume = {54},
 year = {2007}
+}
+@inproceedings{Houston:2013:CFC:2503673.2503681,
+address = {New York, NY, USA},
+author = {Houston, Ben and Larsen, Wayne and Larsen, Bryan and Caron, Jack and Nikfetrat, Nima and Leung, Catherine and Silver, Jesse and Kamal-Al-Deen, Hasan and Callaghan, Peter and Chen, Roy and McKenna, Tim},
+booktitle = {ACM SIGGRAPH 2013 Studio Talks},
+doi = {10.1145/2503673.2503681},
+isbn = {978-1-4503-2343-7},
+keywords = {GUI,WebGL,client-server,collaboration software},
+pages = {8:1----8:1},
+publisher = {ACM},
+series = {SIGGRAPH '13},
+title = {{Clara.Io: Full-featured 3D Content Creation for the Web and Cloud Era}},
+url = {http://doi.acm.org/10.1145/2503673.2503681},
+year = {2013}
+}
+@book{terzidis2003expressive,
+annote = {Acerca de Generative Design.},
+author = {Terzidis, Kostas.},
+isbn = {0-415-31744-4},
+keywords = {Form;Computation;Generative Process},
+publisher = {Taylor \& Francis},
+title = {{\{E\}xpressive form: \{A\} conceptual approach to computational design / \{K\}ostas \{T\}erzidis}},
+year = {2003}
+}
+@book{Maeda:2001:DN:559503,
+abstract = {Most art and technology projects pair artists with engineers or scientists: the artist has the conception, and the technical person provides the know-how. John Maeda is an artist and a computer scientist, and he views the computer not as a substitute for brush and paint but as an artistic medium in its own right. Design By Numbers is a reader-friendly tutorial on both the philosophy and nuts-and-bolts techniques of programming for artists.$\backslash$n$\backslash$nPracticing what he preaches, Maeda composed Design By Numbers using a computational process he developed specifically for the book. He introduces a programming language and development environment, available on the Web, which can be freely downloaded or run directly within any JAVA-enabled Web browser. Appropriately, the new language is called DBN (for "design by numbers"). Designed for "visual" people—artists, designers, anyone who likes to pick up a pencil and doodle—DBN has very few commands and consists of elements resembling those of many other languages, such as LISP, LOGO, C/JAVA, and BASIC.$\backslash$n$\backslash$nThroughout the book Maeda emphasizes the importance—and delights—of understanding the motivation behind computer programming, as well as the many wonders that emerge from well-written programs. Sympathetic to the "mathematically challenged," he places minimal emphasis on mathematics in the first half of the book. Because computation is inherently mathematical, the books second half uses intermediate mathematical concepts that generally do not go beyond high-school algebra. The reader who masters the skills so clearly set out by Maeda will be ready to exploit the true character of digital media design.},
+address = {Cambridge, MA, USA},
+author = {Maeda, John},
+isbn = {9780262632447},
+issn = {08945373},
+pages = {256},
+pmid = {14137991},
+publisher = {MIT Press},
+title = {{Design by Numbers}},
+year = {2001}
+}
+@article{Santos20144,
+annote = {Usar t\'{e}cnicas de Generative Design tem um custo inicial maior que as t\'{e}cnicas convencionais. No entanto, este custo \'{e} compensado quando se torna necess\'{a}rio fazer modifica\c{c}\~{o}es ao modelo.},
+author = {Leit\~{a}o, Ant\'{o}nio},
+doi = {http://dx.doi.org/10.5151/despro-sigradi2013-0043},
+issn = {2318-6968},
+journal = {Blucher Design Proceedings},
+number = {7},
+pages = {235--238},
+title = {{Pushing the Envelope: Stretching the Limits of Generative Design}},
+url = {www.proceedings.blucher.com.br/article-details/pushing-the-envelope-stretching-the-limits-of-generative-design-14129},
+volume = {1},
+year = {2014}
+}
+@article{de2012modern,
+author = {{de Oliveira Lopes}, Jos\'{e} Antonio Branquinho},
+title = {{Modern Programming for Generative Design Extended Abstract}},
+year = {2012}
 }
